--- a/app/index.html
+++ b/app/index.html
@@ -30,14 +30,18 @@
       </nav>
     </header>
 
+    <!-- Showcase -->
     <div class="large-hero">
       <img src="assets/images/hero--large.jpg" />
-      <h1>Таны нандин дурсамж.</h1>
-      <h2>Ганцхан алхам үлдлээ.</h2>
+      <div class="large-hero__text-content">
+        <h1>Таны нандин дурсамж.</h1>
 
-      <p>Бид таны амьдралыг аз жаргал, адал явдлаар дүүргэх болно.</p>
+        <h2>Ганцхан алхам үлдлээ.</h2>
 
-      <p><a href="#">Өнөөдөр эхлэе</a></p>
+        <p>Бид таны амьдралыг аз жаргал, адал явдлаар дүүргэх болно.</p>
+
+        <p><a href="#">Өнөөдөр эхлэе</a></p>
+      </div>
     </div>
 
     <div id="our-beginning">
@@ -171,5 +175,6 @@
     <div class="modal__close">X</div>
   </div>
   This is the end of the "modal" reference HTML -->
+    <script src="bundled.js"></script>
   </body>
 </html>
