large hero text edit

--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,9 @@
           Бид таны амьдралыг аз жаргал, адал явдлаар дүүргэх болно.
         </p>
 
-        <p><a href="#" class="btn btn--orange btn--large">Өнөөдөр эхлэе</a></p>
+        <p>
+          <a href="#" class="btn btn--orange btn--large">Өнөөдөр эхлэе</a>
+        </p>
       </div>
     </div>
 
