--- a/app/index.html
+++ b/app/index.html
@@ -63,17 +63,16 @@
         />
       </picture>
       <div class="large-hero__text-content">
-        <h1 class="large-hero__title">Таны нандин дурсамж.</h1>
-
-        <h2 class="large-hero__subtitle">Ганцхан алхам үлдлээ.</h2>
-
-        <p class="large-hero__description">
-          Бид таны амьдралыг аз жаргал, адал явдлаар дүүргэх болно.
-        </p>
-
-        <p>
-          <a href="#" class="btn btn--orange btn--large">Өнөөдөр эхлэе</a>
-        </p>
+        <div class="wrapper">
+          <h1 class="large-hero__title">Таны нандин дурсамж.</h1>
+          <h2 class="large-hero__subtitle">Ганцхан алхам үлдлээ.</h2>
+          <p class="large-hero__description">
+            Бид таны амьдралыг аз жаргал, адал явдлаар дүүргэх болно.
+          </p>
+          <p>
+            <a href="#" class="btn btn--orange btn--large">Өнөөдөр эхлэе</a>
+          </p>
+        </div>
       </div>
     </div>
 
