webpack dev server deer tohirgoo hiiw

--- a/app/index.html
+++ b/app/index.html
@@ -77,8 +77,10 @@
     </div>
 
     <div id="our-beginning">
-      <h2>Бид анх өөрсдийнхөө аяллаар эхлэж байлаа.</h2>
-      <h3>Одоо бид бусдын аяллыг дурсамжтай болгохыг зорьж байна.</h3>
+      <div class="wrapper">
+        <h2>Бид анх өөрсдийнхөө аяллаар эхлэж байлаа.</h2>
+        <h3>Одоо бид бусдын аяллыг дурсамжтай болгохыг зорьж байна.</h3>
+      </div>
       <img
         src="assets/images/first-trip.jpg"
         alt="Couple walking down a street."
