--- a/app/index.html
+++ b/app/index.html
@@ -251,7 +251,7 @@
         <a href="#" class="btn btn--orange">Хамт аялах</a>
       </p>
     </footer>
-    <!-- "modal" хичээлийг үзтэлээ энэ тайлбар бүхий хэсгийг битгий нээгээрэй
+    <!-- "modal"
   <div class="modal">
     <div class="modal__inner">
       <h2 class="section-title section-title--blue section-title--less-margin"><img src="assets/images/icons/mail.svg" class="section-title__icon"> Хамт <strong>Аялах</strong></h2>
